--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
@@ -25,7 +25,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "prebulid": "npm run bulid",
+    "predeply": "npm run build",
     "deploy": "gh-pages -d bulid"
   },
   "eslintConfig": {
@@ -46,5 +46,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://joun008.github.io/GDSC-GIST/Web2_clone_coding.git"
+  "homepage": "http://joun008.github.io/nwitter"
 }
