--- a/package.json
+++ b/package.json
@@ -46,5 +46,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://joun008.github.io/nwitter"
+  "homepage": "http://joun008.github.io/nwitter/."
 }
