--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "predeply": "npm run build",
-    "deploy": "gh-pages -b master -d bulid"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
